--- a/tentang.html
+++ b/tentang.html
@@ -96,7 +96,7 @@
     <section class="video-section">
       <h2 class="video-title">Saksikan Keajaiban Terjadi</h2>
       <video controls>
-        <source src="video bebek.mp4" type="video/mp4" />
+        <source src="video bebekkk.mp4" type="video/mp4" />
       </video>
     </section>
 
@@ -148,3 +148,4 @@
     </footer>
   </body>
 </html>
+
